Committing latest changes/updates to:
assets/scripts/app.js
assets/scripts/auth/api.js
assets/scripts/auth/events.js
assets/scripts/auth/ui.js
assets/scripts/likes/api.js
assets/scripts/likes/events.js
assets/scripts/likes/ui.js
assets/scripts/user/api.js
assets/scripts/user/events.js
assets/styles/index.scss
index.html

--- a/index.html
+++ b/index.html
@@ -120,11 +120,13 @@
       <button type="submit" class="btn btn-default">Show Current Profile</button>
     </form>
 
-    <!-- <form class="user" id="show-user-likes">
-      <button type="submit" class="btn btn-default">User Likes</button>
-    </form> -->
-
     <div id="user-profile-info"></div>
+
+    <form class="user" id="show-user-likes">
+      <button type="submit" class="btn btn-default">Show Likes</button>
+    </form>
+
+    <div id="user-likes-info"></div>
 
     <form class="delete-user" id="delete-profile">
       <button type="submit" class="btn btn-default">Delete Profile</button>
