--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         font-size: 500px;
         text-align: center;
         background-color: gray;
-        background-image: url("http://www.biocenit.cat/mypics/90/902214/hello-wallpaper-friend.jpg");
+        background-image: url("https://www.biocenit.cat/mypics/90/902214/hello-wallpaper-friend.jpg");
         background-size: 25%
       }
 
