Undoing changes to image/wallpaper in html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         text-align: center;
         background-color: gray;
         /* background-image: "/public/Images/hello-wallpaper-friend.jpg" */
-        /* background-image: url("http://www.biocenit.cat/mypics/90/902214/hello-wallpaper-friend.jpg"); */
+        background-image: url("http://www.biocenit.cat/mypics/90/902214/hello-wallpaper-friend.jpg");
         background-size: 25%
       }
 
