Commenting out changes to html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <h1>I LIKE YOU</h1>
       <h2>A
-        <!-- <a href="https://en.wikipedia.org/wiki/Queer"> "queer"  </a>
+        <!-- <a href="https://en.wiktionary.org/wiki/queer"> "queer"  </a>
         <a href="https://transequality.org/issues/resources/understanding-non-binary-people-how-to-be-respectful-and-supportive"> (nonbinary,  </a>
         <a href="https://en.wikipedia.org/wiki/Genderqueer"> gender diverse,  </a>
         <a href="https://www.entitymag.com/heteronormativity-meaning-problems/"> nonheteronormative,  </a>
