committing new changes to html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         text-align: center;
         background-color: gray;
         background-image: url("http://www.biocenit.cat/mypics/90/902214/hello-wallpaper-friend.jpg");
+        /* background-image: url('public/images/wallpaper.jpg') */
         background-size: 25%
       }
 
