--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         font-size: 500px;
         text-align: center;
         background-color: gray;
-        background-image: url("http://www.biocenit.cat/mypics/90/902214/hello-wallpaper-friend.jpg");
-        /* background-image: url('public/images/wallpaper.jpg') */
-        background-size: 25%
+        /* background-image: url("http://www.biocenit.cat/mypics/90/902214/hello-wallpaper-friend.jpg"); */
+        background-image: url('public/images/hello-wallpaper-friend.jpg');
+        background-size: 25%;
       }
 
       body {
