Committing change to html: testing wallpaper image url on server

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
         font-size: 500px;
         text-align: center;
         background-color: gray;
-        /* background-image: "/public/Images/hello-wallpaper-friend.jpg" */
         background-image: url("http://www.biocenit.cat/mypics/90/902214/hello-wallpaper-friend.jpg");
-        background-size: 25%
+        background-size: 25%;
       }
 
       body {
