--- a/index.html
+++ b/index.html
@@ -41,6 +41,49 @@
         padding-top: 25px
       }
 
+      body {
+        font: 20px Montserrat, sans-serif;
+        line-height: 1.8;
+        color: #f5f6f7;
+      }
+
+      p {font-size: 16px;}
+        .margin {margin-bottom: 45px;}
+        .bg-1 {
+          background-color: #1abc9c; /* Green */
+          color: #ffffff;
+        }
+        .bg-2 {
+          background-color: #474e5d; /* Dark Blue */
+          color: #ffffff;
+        }
+        .bg-3 {
+          background-color: #ffffff; /* White */
+          color: #555555;
+        }
+        .bg-4 {
+          background-color: #2f2f2f; /* Black Gray */
+          color: #fff;
+        }
+        .container-fluid {
+          padding-top: 70px;
+          padding-bottom: 70px;
+        }
+        .navbar {
+          padding-top: 15px;
+          padding-bottom: 15px;
+          border: 0;
+          border-radius: 0;
+          margin-bottom: 0;
+          font-size: 12px;
+          letter-spacing: 5px;
+        }
+        .navbar-nav  li a:hover {
+          color: #1abc9c !important;
+        }
+
+
+
       </style>
 
     </head>
@@ -51,12 +94,6 @@
       <h2>A friending app</h2>
 
       <p id="message"></p>
-
-      <!-- <button id="create-user" class="button">Create Profile</button>
-      <button id="update-user" class="button">Update Profile</button>
-      <button id="user-info" class="button">Profile Info?</button>
-      <button id="delete-user" class="button">Delete Profile</button> -->
-
 
         <form id="sign-up" class="border">
           <fieldset>
@@ -94,8 +131,109 @@
         </form>
 
         <h2></h2>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Create profile Modal</button>
 
-      <form class="user" id="create-profile-form">
+
+        <button id="create-user" class="button">Create Profile</button>
+        <button id="update-user" class="button">Update Profile</button>
+        <button id="user-info" class="button">Profile Info</button>
+        <button id="delete-user" class="button">Delete Profile</button>
+        <a href="#" class="btn btn-default btn-lg">
+          <span class="glyphicon glyphicon-search"></span> Search
+        </a>
+
+        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <nav class="navbar navbar-default">
+                <div class="container">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">About Me</a>
+                  </div>
+                  <div class="modal-close">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                  <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav navbar-right">
+                      <li><a href="#">WHO</a></li>
+                      <li><a href="#">WHAT</a></li>
+                      <li><a href="#">WHERE</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+
+              <div class="container-fluid well span6">
+
+              <!-- First Container -->
+              <div class="container-fluid bg-1 text-center">
+                <h4 class="margin">About you?</h4>
+                <img src="public/Images/hello-wallpaper-friend.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+                <h4>I'm an adventurer</h4>
+
+                <form class="user"
+                  id="create-profile-form">
+                  <button type="submit" class="btn btn-default">Create Profile or Update Current Profile</button>
+                  <div class="form-group">
+                    <input required type="text" name="user[userName]" placeholder="User Name" id="username">
+                    <input required type="text" name="user[location]" placeholder="Location" id="userlocation">
+                    <input required type="text" name="user[about]" placeholder="About You (in 3 words)" id="aboutuser">
+                    <input required type="text" name="user[genderIdentity]" placeholder="Gender Identity" id="useridentity">
+                    <input required type="text" name="user[preferredPronoun]" placeholder="Preferred Pronoun" id="userpronoun">
+                  </div>
+                </form>
+              </div>
+
+              <!-- Second Container -->
+              <div class="container-fluid bg-2 text-center">
+                <h4 class="margin">What are your likes and interests?</h4>
+                <form class="user" id="likes-form">
+                  <button type="submit" class="btn btn-default">Likes and Interests?</button>
+                  <div class="form-group">
+                    <input required type="text" name="like[interests]" placeholder="Interests" id="userinterests">
+                    <input required type="text" name="like[fiveFaves]" placeholder="5 Fave Things" id="userfaves">
+                    <input required type="text" name="like[personalityTypes]" placeholder="Personality Types" id="personalities">
+                    <input required type="text" name="like[genderPrefs]" placeholder="Gender Prefs" id="genderprefs">
+                    <input required type="text" name="like[searchingFor]" placeholder="Searching For?" id="usersearch">
+                  </div>
+                </form>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+              </div>
+
+              <!-- Third Container (Grid) -->
+              <div class="container-fluid bg-3 text-center">
+                <h4 class="margin">Where To Find Me?</h4><br>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <!-- <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image"> -->
+                  </div>
+                  <div class="col-sm-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <!-- <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image"> -->
+                  </div>
+                  <div class="col-sm-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <!-- <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image"> -->
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <!-- <form class="user" id="create-profile-form">
         <button type="submit" class="btn btn-default">Create Profile or Update Current Profile</button>
         <div class="form-group">
           <input required type="text" name="user[userName]" placeholder="User Name" id="username">
@@ -131,7 +269,7 @@
 
     <form class="delete-user" id="delete-profile">
       <button type="submit" class="btn btn-default">Delete Profile</button>
-    </form>
+    </form> -->
 
         <h3></h3>
 
